# polygon_ros

./: .pre-commit-config.yaml  LICENSE  README.md
polygon_demos/: CMakeLists.txt  package.xml
polygon_demos/config/: demo_polygons.rviz
polygon_demos/launch/: polygons.launch.py
polygon_demos/src/: polygon_demo.cpp
polygon_msgs/: CMakeLists.txt  package.xml
polygon_msgs/msg/: ComplexPolygon2D.msg  ComplexPolygon2DCollection.msg  ComplexPolygon2DStamped.msg  Polygon2D.msg  Polygon2DCollection.msg  Polygon2DStamped.msg
polygon_rviz_plugins/: CMakeLists.txt  package.xml  rviz_common_plugins.xml
polygon_rviz_plugins/include/polygon_rviz_plugins/: complex_polygon_display.hpp  complex_polygons_display.hpp  polygon3d_display.hpp  polygon_base.hpp  polygon_display.hpp  polygon_parts.hpp  polygons_display.hpp  validate_floats.hpp
polygon_rviz_plugins/src/: complex_polygon_display.cpp  complex_polygons_display.cpp  polygon3d_display.cpp  polygon_display.cpp  polygon_parts.cpp  polygons_display.cpp
polygon_utils/: CMakeLists.txt  package.xml  setup.py
polygon_utils/include/mapbox/: earcut.hpp
polygon_utils/include/polygon_utils/: polygon_utils.hpp
polygon_utils/polygon_utils/: __init__.py  shapely_lib.py  shortest_path.py
polygon_utils/src/: polygon_utils.cpp
polygon_utils/test/: test_shortest_path.py
