<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_demos</name>
  <version>1.1.0</version>
  <description>Demo of polygon_rviz_plugins</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>angles</depend>
  <depend>color_util</depend>
  <depend>geometry_msgs</depend>
  <depend>polygon_msgs</depend>
  <depend>polygon_rviz_plugins</depend>
  <depend>polygon_utils</depend>
  <depend>rclcpp</depend>
  <depend>rviz2</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
