<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_utils</name>
  <version>1.1.0</version>
  <description>Utilities for working with polygons, including triangulation</description>
  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>polygon_msgs</depend>
  <depend>python3-shapely</depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
